# recipebox

./: db.sqlite3  pyproject.toml
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_author_favorite.py  0002_author_favorites.py  0002_auto_20200507_2116.py
news/templates/: author_detail.html  error.html  generic_form.html  index.html  recipe_detail.html
recipe/: settings.py  urls.py
