[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "This is my project!"
authors = ["Julita Marshall <julitamcg5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
pylint = "^2.5.2"
flake8 = "^3.8.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
